--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My portfolio</title>
+    <link rel="icon" type="images/x-icon" href="assets/logo.png" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
   </head>
@@ -14,9 +15,9 @@
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
-          <li><a href="#project">Projects</a></li>
           <li><a href="#certification">Skills & Certification</a></li>
-          <li><a href="#contact">Contact</a></li>        
+          <li><a href="#project">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
     </nav>
@@ -32,136 +33,148 @@
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
           <li><a href="#project" onclick="toggleMenu()">Project</a></li>
-          <li><a href="#certification" onclick="toggleMenu()">Skills & Certification</a></li>
+          <li>
+            <a href="#certification" onclick="toggleMenu()"
+              >Skills & Certification</a
+            >
+          </li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
       </div>
     </nav>
     <section id="profile">
       <div class="sec_pic-container">
-        <img src="./assets/profile-me.png" alt="Ajay Krishnakanth RV profile picture">
+        <img
+          src="./assets/profile-me.png"
+          alt="Ajay Krishnakanth RV profile picture"
+          class="picaju"
+        />
       </div>
       <div class="sec-text">
         <p class="sectext-p1">Hello, I'm</p>
         <h1 class="tital">Ajay Krishnakanth RV</h1>
         <p class="sectext-p2">Full-Stack Developer</p>
         <div class="btn-container">
-          <button class="btn btn-color2"
-          onclick="window.open('./assets/CV-Ajay Krishanakanth RV.pdf')">
-          Download CV</button>
-          <button class="btn btn-color1"
-          onclick="location.href='./#contact'">
-          Contact Info</button>
+          <button
+            class="btn btn-color2"
+            onclick="window.open('./assets/CV-Ajay Krishanakanth RV.pdf')"
+          >
+            Download CV
+          </button>
+          <button class="btn btn-color1" onclick="location.href='./#contact'">
+            Contact Info
+          </button>
         </div>
         <div id="social-container">
-          <img 
-          src=".//assets/linkedin.png" 
-          alt="LinkedIn profile"
-          class="icon" 
-          onclick="location.href='https://www.linkedin.com/in/ajay-krishnakanth-r-v'"/>
-          <img 
-          src=".//assets/github.png" 
-          alt="My GitHub profile"
-          class="icon" 
-          onclick="location.href='https://github.com/Ajaykrishnakanthrv'"/>
+          <img
+            src=".//assets/linkedin.png"
+            alt="LinkedIn profile"
+            class="icon"
+            onclick="location.href='https://www.linkedin.com/in/ajay-krishnakanth-r-v'"
+          />
+          <img
+            src=".//assets/github.png"
+            alt="My GitHub profile"
+            class="icon"
+            onclick="location.href='https://github.com/Ajaykrishnakanthrv'"
+          />
+        </div>
       </div>
     </section>
-    <section>
-      <section id="about">
-        <p class="sectext-p1">Get  To Know More</p>
-        <h1 class="title">About Me</h1>
-        <div class="sec-container">
-          <div class="sec_pic-container">
-            <img src="./assets/profile-me.png" 
+    <section id="about">
+      <p class="sectext-p1">Get To Know More</p>
+      <h1 class="title">About Me</h1>
+      <div class="sec-container">
+        <div class="sec_pic-container">
+          <img
+            src="./assets/profile-me.png"
             alt="profile picture"
-            class="about-pic"/>
-          </div>
-          <div class="about-detail-container">
-            <div class="about-container">
-              <div class="detail-container">
-                <img src="./assets/experience.png"  
-                alt="Education"
-                class="icon"/>
-                <h3>Java Full-Stack Developer Course</h3>
-                <p>Duration : 4 months <br /> Greens Technology</p>
-              </div>
-              <div class="detail-container">
-                <img
-                  src="./assets/education.png"
-                  alt="Education icon"
-                  class="icon"
-                />
-                <h3>Education</h3>
-                <p>B.E.(Computer Science and Engineering) <br />Bachelors Degree<br />Anna University</p>
-              </div>
-              </div>
-              <div class="text-container">
-                <p>
-                  An enthusiastic and ambitious individual looking for an opportunity to
-                  work under an organization to showcase my skills, improve my
-                  knowledge and be a valuable asset to the organization.
-                </p>
-              </div>
+            class="about-pic"
+          />
+        </div>
+        <div class="about-detail-container">
+          <div class="about-container">
+            <div class="detail-container">
+              <img src="./assets/experience.png" alt="Education" class="icon" />
+              <h3>Java Full-Stack Developer Course</h3>
+              <p>
+                Duration : 4 months <br />
+                Greens Technology
+              </p>
+            </div>
+            <div class="detail-container">
+              <img
+                src="./assets/education.png"
+                alt="Education icon"
+                class="icon"
+              />
+              <h3>Education</h3>
+              <p>
+                B.E.(Computer Science and Engineering) <br />Bachelors Degree<br />Anna
+                University
+              </p>
             </div>
           </div>
-          <img src="./assets/arrow.png"
-          alt="arrow icon"
-          class="icon arrow" 
-          onclick="location.href='./#certification'"/>
-      </section>
+          <div class="text-container">
+            <p>
+              An enthusiastic and ambitious individual looking for an
+              opportunity to work under an organization to showcase my skills,
+              improve my knowledge and be a valuable asset to the organization.
+            </p>
+          </div>
+        </div>
+      </div>
+      <img
+        src="./assets/arrow.png"
+        alt="arrow icon"
+        class="icon arrow a-about"
+        onclick="location.href='./#certification'"
+      />
     </section>
-    <section id="skills-certification" >
+    <section id="certification">
       <p class="sectext-p1">Explore My</p>
       <h1 class="title">Skills & Certification</h1>
       <div class="ex-detail-container">
         <div class="about-container">
           <div class="detail-container">
-           <h2 class="ex-sub-title">Skills</h2>
+            <h2 class="ex-sub-title">Skills</h2>
             <div class="article-container">
               <article>
-                <img src="./assets/html.jpg" 
-                alt="skill icon"
-                class="icon"/>
+                <img src="./assets/html.jpg" alt="skill icon" class="icon" />
                 <div>
                   <h3>HTML</h3>
                 </div>
               </article>
               <article>
-                <img src="./assets/css.png" 
-                alt="skill icon"
-                class="icon"/>
+                <img src="./assets/css.png" alt="skill icon" class="icon" />
                 <div>
                   <h3>CSS</h3>
                 </div>
               </article>
               <article>
-                <img src="./assets/python.png" 
-                alt="skill icon"
-                class="icon"/>
+                <img src="./assets/python.png" alt="skill icon" class="icon" />
                 <div>
                   <h3>Python</h3>
                 </div>
               </article>
               <article>
-                <img src="./assets/javascript.png" 
-                alt="skill icon"
-                class="icon"/>
+                <img
+                  src="./assets/javascript.png"
+                  alt="skill icon"
+                  class="icon"
+                />
                 <div>
                   <h3>Javascript</h3>
                 </div>
               </article>
               <article>
-                <img src="./assets/java.png" 
-                alt="skill icon"
-                class="icon"/>
+                <img src="./assets/java.png" alt="skill icon" class="icon" />
                 <div>
                   <h3>Java</h3>
                 </div>
               </article>
               <article>
-                <img src="./assets/sql.png" 
-                alt="skill icon"
-                class="icon"/>
+                <img src="./assets/sql.png" alt="skill icon" class="icon" />
                 <div>
                   <h3>SQL</h3>
                 </div>
@@ -178,12 +191,12 @@
                   class="icon"
                 />
                 <div>
-                  <h3>
-                    Java Full-Stack
-                  </h3>
+                  <h3>Java Full-Stack</h3>
                   <p>Java, HTML, CSS, javascript, Spring Boot</p>
                   <p>Greens Technology</p>
-                  <a href="./assets/greens.png" target="_blank">View Certificate</a>
+                  <a href="./assets/greens.png" target="_blank"
+                    >View Certificate</a
+                  >
                 </div>
               </article>
               <article>
@@ -193,12 +206,14 @@
                   class="icon"
                 />
                 <div>
-                  <h3>
-                    HDCA(Honours Diploma in Computer Application)
-                  </h3>
-                  <p>MS Office, C, C++, Java, Python, OOPS, Visual Basic ,My SQL</p>
+                  <h3>HDCA(Honours Diploma in Computer Application)</h3>
+                  <p>
+                    MS Office, C, C++, Java, Python, OOPS, Visual Basic ,My SQL
+                  </p>
                   <p>Computer Software College</p>
-                  <a href="./assets/csc.png" target="_blank">View Certificate</a>
+                  <a href="./assets/csc.png" target="_blank"
+                    >View Certificate</a
+                  >
                 </div>
               </article>
               <article>
@@ -208,40 +223,50 @@
                   class="icon"
                 />
                 <div>
-                  <h3>
-                    New India Learnathon 2020
-                  </h3>
-                  <p>Automation Anywhere, MathWorks, AWS Education, STEP </p>
+                  <h3>New India Learnathon 2020</h3>
+                  <p>Automation Anywhere, MathWorks, AWS Education, STEP</p>
                   <p>ICT Academy</p>
-                  <a href="./assets/ict.png" target="_blank">View Certificate</a>
+                  <a href="./assets/ict.png" target="_blank"
+                    >View Certificate</a
+                  >
                 </div>
               </article>
             </div>
           </div>
         </div>
       </div>
-      <img src="./assets/arrow.png"
-      alt="arrow icon"
-      class="icon arrow" 
-      onclick="location.href='./#project'"/>    
+      <img
+        src="./assets/arrow.png"
+        alt="arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#project'"
+      />
     </section>
-    <section id="projects">
+    <section id="project">
       <p class="sectext-p1">Browse My Recent</p>
       <h1 class="title">Projects</h1>
       <div class="ex-detail-container">
         <div class="about-container">
           <div class="detail-container color-container">
             <div class="article-container">
-              <img src="./assets/crs.jpg" 
-              alt="Project1"
-              class="project-img1"/>
+              <img src="./assets/crs.jpg" alt="Project1" class="project-img1" />
               <div>
-                <h2 class="ex-sub-title project-title">Content Based Recommendation System</h2>
-                <p>A movie recommendation system, or a movie recommender system, is an ML-based approach to filtering or predicting the users’ film preferences based on their past choices and behavior. It’s an advanced filtration mechanism that predicts the possible movie choices of the concerned user 
-                  and their preferences towards a domain-specific item, aka movie.</p>
+                <h2 class="ex-sub-title project-title">
+                  Content Based Recommendation System
+                </h2>
+                <p>
+                  A movie recommendation system, or a movie recommender system,
+                  is an ML-based approach to filtering or predicting the users’
+                  film preferences based on their past choices and behavior.
+                  It’s an advanced filtration mechanism that predicts the
+                  possible movie choices of the concerned user and their
+                  preferences towards a domain-specific item, aka movie.
+                </p>
                 <div class="btn-container">
-                  <button class="btn btn-color2 project-btn"
-                    onclick="location.href='https://github.com'">
+                  <button
+                    class="btn btn-color2 project-btn"
+                    onclick="location.href='https://github.com'"
+                  >
                     GitHub
                   </button>
                 </div>
@@ -250,15 +275,21 @@
           </div>
           <div class="detail-container color-container">
             <div class="article-container">
-              <img src="./assets/crs.jpg" 
-              alt="Project2"
-              class="project-img1"/>
+              <img src="./assets/pet.jpg" alt="Project2" class="project-img1" />
               <div>
-                <h2 class="ex-sub-title project-title">Content Based Recommendation System</h2>
-                <p>A movie recommendation system, or a movie recommender system, is an ML-based approach to filtering or predicting the users’ film preferences based on their past choices and behavior. It’s an advanced filtration mechanism that predicts the possible movie choices of the concerned user 
-                  and their preferences towards a domain-specific item, aka movie.</p>
+                <h2 class="ex-sub-title project-title">
+                  Personal Expense Tracker
+                </h2>
+                <p>
+                  Personal Expense Tracker (PET) is a daily expense management system ,
+                  which is specially designed for non- salaried and salaried 
+                  personnel for keeping track of their daily expenditure with easy and effective 
+                  waythrough computerized system which tends to eliminate manual paperworks.
+                  It will also manage records in systematic way and user can accessthe stored data conveniently.
+                </p>
                 <div class="btn-container">
-                  <button class="btn btn-color2 project-btn"
+                  <button
+                    class="btn btn-color2 project-btn"
                     onclick="location.href='https://github.com'">
                     GitHub
                   </button>
@@ -267,13 +298,57 @@
             </div>
           </div>
         </div>
-      </div> 
-      <img src="./assets/arrow.png"
-      alt="arrow icon"
-      class="icon arrow" 
-      onclick="location.href='./#contact'"/>
+      </div>
+      <img
+        src="./assets/arrow.png"
+        alt="arrow icon"
+        class="icon arrow"
+        onclick="location.href='./#contact'"
+      />
     </section>
+    <section id="contact">
+      <p class="sectext-p1">Get In Touch</p>
+      <h1 class="title">Contact Me</h1>
+      <div class="contact-info-upper-container">
+        <div class="contact-info-container">
+          <img
+            src="./assets/email.png"
+            alt="email icon"
+            class="icon contact-icon email-icon"
+          />
+          <p>
+            <a href="ajaykrishnakanthrv@gmail.com"
+              >ajaykrishnakanthrv@gmail.com</a
+            >
+          </p>
+        </div>
+        <div class="contact-info-container">
+          <img
+            src="./assets/linkedin.png"
+            alt="linkedin icon"
+            class="icon contact-icon"
+          />
+          <p>
+            <a href="https://www.linkedin.com/in/ajay-krishnakanth-r-v"
+              >Ajay krishnakanth.R.V</a
+            >
+          </p>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <nav>
+        <div class="nav-links-container">
+          <ul class="nav-links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#project">Projects</a></li>
+            <li><a href="#certification">Skills & Certification</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+      <p>Copyright &#169; 2024 Ajay Krishanakanth</p>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
- 
