--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Ajay">
     <title>My portfolio</title>
     <link rel="icon" type="images/x-icon" href="assets/logo.png" />
     <link rel="stylesheet" href="style.css" />
@@ -11,7 +12,7 @@
   </head>
   <body>
     <nav id="desktop-nav">
-      <div class="logo">Ajay Krishnakanth V</div>
+      <div class="logo">Ajay Krishnakanth RV</div>
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
@@ -263,12 +264,6 @@
                   preferences towards a domain-specific item, aka movie.
                 </p>
                 <div class="btn-container">
-                  <button
-                    class="btn btn-color2 project-btn"
-                    onclick="location.href='https://github.com'"
-                  >
-                    GitHub
-                  </button>
                 </div>
               </div>
             </div>
@@ -288,11 +283,6 @@
                   It will also manage records in systematic way and user can accessthe stored data conveniently.
                 </p>
                 <div class="btn-container">
-                  <button
-                    class="btn btn-color2 project-btn"
-                    onclick="location.href='https://github.com'">
-                    GitHub
-                  </button>
                 </div>
               </div>
             </div>
