--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Ajay">
+    <meta name="author" content="Ajay" />
     <title>My portfolio</title>
     <link rel="icon" type="images/x-icon" href="assets/logo.png" />
     <link rel="stylesheet" href="style.css" />
@@ -263,8 +263,7 @@
                   possible movie choices of the concerned user and their
                   preferences towards a domain-specific item, aka movie.
                 </p>
-                <div class="btn-container">
-                </div>
+                <div class="btn-container"></div>
               </div>
             </div>
           </div>
@@ -276,14 +275,15 @@
                   Personal Expense Tracker
                 </h2>
                 <p>
-                  Personal Expense Tracker (PET) is a daily expense management system ,
-                  which is specially designed for non- salaried and salaried 
-                  personnel for keeping track of their daily expenditure with easy and effective 
-                  waythrough computerized system which tends to eliminate manual paperworks.
-                  It will also manage records in systematic way and user can accessthe stored data conveniently.
+                  Personal Expense Tracker (PET) is a daily expense management
+                  system , which is specially designed for non- salaried and
+                  salaried personnel for keeping track of their daily
+                  expenditure with easy and effective waythrough computerized
+                  system which tends to eliminate manual paperworks. It will
+                  also manage records in systematic way and user can accessthe
+                  stored data conveniently.
                 </p>
-                <div class="btn-container">
-                </div>
+                <div class="btn-container"></div>
               </div>
             </div>
           </div>
@@ -307,9 +307,9 @@
             class="icon contact-icon email-icon"
           />
           <p>
-            <a href="ajaykrishnakanthrv@gmail.com"
-              >ajaykrishnakanthrv@gmail.com</a
-            >
+            <a href="ajaykrishnakanthrv@gmail.com" type="gmail">
+              ajaykrishnakanthrv@gmail.com
+            </a>
           </p>
         </div>
         <div class="contact-info-container">
@@ -319,9 +319,9 @@
             class="icon contact-icon"
           />
           <p>
-            <a href="https://www.linkedin.com/in/ajay-krishnakanth-r-v"
-              >Ajay krishnakanth.R.V</a
-            >
+            <a href="https://www.linkedin.com/in/ajay-krishnakanth-r-v">\
+              LinkedIn
+            </a>
           </p>
         </div>
       </div>
