--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
             class="icon contact-icon"
           />
           <p>
-            <a href="https://www.linkedin.com/in/ajay-krishnakanth-r-v">\
+            <a href="https://www.linkedin.com/in/ajay-krishnakanth-r-v">
               LinkedIn
             </a>
           </p>
