--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
             class="icon contact-icon email-icon"
           />
           <p>
-            <a href="ajaykrishnakanthrv@gmail.com" type="gmail">
+            <a href="mailto:ajaykrishnakanthrv@gmail.com" type="gmail">
               ajaykrishnakanthrv@gmail.com
             </a>
           </p>
