--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color2"
-            onclick="window.open('./assets/CV-Ajay Krishanakanth RV.pdf')"
+            onclick="window.open('./assets/AjayKrishnakanthResume.pdf')"
           >
             Download CV
           </button>
